# NeuralDSP-Amp-Plugin

./: CMakeLists.txt  requirements.txt
include/: AudioFile.h
models/: my_lstm.pt
python/: main.py
src/: main.cpp
